# GPT2

./: Qwen.py  README.md  error.py  genimi2-5.py  llama3.py  pyproject.toml  readme.md  中研院.py  中研院GPT2.ipynb  社群.ipynb  社群.py
