[project]
name = "cgu-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.64.0",
    "auto-gptq>=0.7.1",
    "bitsandbytes>=0.47.0",
    "einops>=0.8.1",
    "google>=3.0.0",
    "google-api-python-client>=2.179.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.6",
    "optimum>=1.27.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "transformers-stream-generator>=0.0.5",
]
